--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "clash-capella-app",
   "version": "1.0.0",
-  "description": "App CRUD de Couchbase Capella con Node.js",
-  "main": "server.js",
+  // ...
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "preinstall": "npm install --force" // <-- NUEVO: Para forzar la instalación
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "couchbase": "^4.1.0",
+    "couchbase": "^4.1.0", // <-- VERIFICA ESTA VERSIÓN
     "express": "^4.18.2",
     "uuid": "^9.0.1"
   }
