--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App CRUD de Couchbase Capella con Node.js",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
